# Kaggle-Competition-Jaguar-Re-identification

./: .gitignore  EDA_EXPERIMENTS.md  LEADERBOARD_EXPERIMENTS.md  README.md  pyproject.toml  sweep.yaml
docs/: how_to_slurm.md
notebooks/: 00_exploratory_data_analysis.ipynb  02_backbone.ipynb  03_loss.ipynb  04_loss_combined.ipynb  05_optimizers.ipynb  06_scheduler.ipynb  07_class_balance.ipynb  08_interpretability.ipynb  08_sweep.ipynb  08_sweep_a.ipynb  08_sweep_b.ipynb  08a_sweep.ipynb  08b_sweep.ipynb  09_reranking.ipynb  09_sim_model.ipynb  10_reranking.ipynb  10_sim_model.ipynb  11_interpretability.ipynb  11_sim_model.ipynb  backbone.ipynb  background_interventions.ipynb  create_fiftyone_dataset.ipynb  data_augmentation.ipynb  duplicate_removal.ipynb  example_notebook.ipynb  exploratory_data_analysis.ipynb  jaguar-reidentification-megadescriptor-arcfaceloss.ipynb  loss.ipynb  loss_combined.ipynb  megadescriptor-arcfaceloss-sweep.ipynb  megadescriptor-arcfaceloss.ipynb  setup.py
output/01_background_interventions/: submission.csv
output/02_backbone_comparison/: submission.csv
output/03_loss_comparison/: submission.csv
output/04_loss_combined/: submission.csv
output/05_optimize_comparison/: submission.csv
output/06_scheduler_comparison/: submission.csv
output/07_class_balancing/: submission.csv
output/08a_hyperparameter_sweep/: submission.csv
output/08b_hyperparameter_sweep/: submission.csv
output/09_reranking/: reranking_hyperparameter_sweep.csv  submission.csv
output/10_similarity_model/: submission.csv
output/backbone/: submission.csv
(+48 files in other folders)
