[project]
name = "jaguar-re-identification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anywidget>=0.9.21",
    "dotenv>=0.9.9",
    "fiftyone>=1.11.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "kaleido>=1.2.0",
    "matplotlib>=3.10.8",
    "notebook>=7.5.3",
    "pandas>=2.3.3",
    "timm>=1.0.24",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "umap-learn>=0.5.11",
    "wandb>=0.24.0",
]
